upgrade to java 25 and remove deprecated URL constructors